+ UI files updated to show and edit new status for vocabulary concept. + Status enum values are updated for accurate bit masking. + Unit test errors and fails reduced [STILL FAILING]. + Checkstyle, FindBugs & Codeformatting Updates Refs: #20503